# AFAC_solver

./: .fprettify  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  benchmark_results.csv  config.caf  fortitude.toml  job.sh  pyproject.toml  visualization.py
benchmarking/: CMakeLists.txt  benchmark.f90
main/: CMakeLists.txt  main.f90
src/: CMakeLists.txt  afac.f90  analytical_solution.f90  boundary.f90  communication.f90  multigrid_solver.f90  output.f90  setup.f90  setup_initial_condition.f90
